@@ -1,3 +1,10 @@
+1998-12-16  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>
+
+	* Makefile.am (libgnomesupport_la_SOURCES): added gnome-argp.c,
+	which is needed for platforms without
+	program_invocation_short_name and program_invocation_name.
+	(libgnomesupport_la_LIBADD): reinstalled the correct value.
+
 1998-12-15  Martin Baulig  <martin@home-of-linux.org>
 
 	* Makefile.am (EXTRA_DIST): Add all source and header files here.
